@startuml CommandClassDiagram
hide circle
skinparam classAttributeIconSize 0
scale max 1024 width
'left to right direction

' Abstract base class
abstract class "{abstract} \n Command" {
    # CommandType commandType
    + {abstract} execute(): void
    + getCommandType(): CommandType
}

' Command Type Enum
enum "{enumeration} \n CommandType"  {
    ADD
    EDIT
    DELETE
    READ
    LIST
    OPEN
    CLOSE
    FIND
    SETTING
    HELP
    BYE
}


' Concrete Command Classes
class AddCommand {
    - String caseTitle
    - String caseCategory
    - LocalDate caseDate
    - String caseInfo
    - String caseVictim
    - String caseOfficer
    + AddCommand(String, String, LocalDate, String, String, String)
    + execute(): void
    - generateHexId(): String
}

class EditCommand {
    - String caseId
    - newFlagValues : Map<String, Object>
    + EditCommand(String, Map<String, Object>)
    + execute(): void
}

class EditPromptCommand {
    - String caseId
    + EditPromptCommand(String)
    + execute(): void
}

class DeleteCommand {
    - String caseId
    + DeleteCommand(String)
    + execute(): void
}


class OpenCommand {
    - String caseId
    + OpenCommand(String)
    + execute(): void
}

class CloseCommand {
    - String caseId
    + CloseCommand(String)
    + execute(): void
}



' Inheritance relationships
"{abstract} \n Command" <|-- AddCommand
"{abstract} \n Command" <|-- EditCommand
"{abstract} \n Command" <|-- EditPromptCommand
"{abstract} \n Command" <|-- DeleteCommand
"{abstract} \n Command" <|-- OpenCommand
"{abstract} \n Command" <|-- CloseCommand

' Associations with enums
"{abstract} \n Command" ..> "{enumeration} \n CommandType"
AddCommand ..> "{enumeration} \n CommandType"
EditCommand ..> "{enumeration} \n CommandType"
EditPromptCommand ..> "{enumeration} \n CommandType"
DeleteCommand ..> "{enumeration} \n CommandType"
OpenCommand ..> "{enumeration} \n CommandType"
CloseCommand ..> "{enumeration} \n CommandType"

' Notes
note right of "{abstract} \n Command"
    Abstract base class implementing
    the Command Pattern.
    All commands must implement
    the execute() method.
end note

note right of "{enumeration} \n CommandType"
    Defines all supported
    command types in the system
end note




@enduml
